# zidu-is-god

./: .gitignore  ARCHITECTURE.md  CONTRIBUTORS.md  LICENSE  README.md  README_EN.md  output_50ch.txt  start.bat  start.sh
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: cli.py  config.py  core.py  novel_parser.py  persistence.py  server.py  timeline.py
backend/app/characters/: generator.py  memory.py  schema.py
backend/app/engine/: actions.py  character_pool.py  deliberation.py  environment.py  events.py  parallel.py  perception.py  simulation.py  volume_manager.py
backend/app/llm/: client.py
backend/app/memory/: external_memory.py
backend/app/narrator/: narrator.py  quality.py
backend/app/plot/: catalysts.py  director.py  emotion_curve.py  foreshadowing.py  risk_registry.py  status_card.py  tension.py
backend/app/world/: actors.py  builder.py  engine.py  events.py  fog.py  rumors.py  schema.py  threats.py  weather.py  world_types.py
backend/app/worldbuilding/: __init__.py  character_design_agent.py  direction_agent.py  pipeline.py  scene_cast.py  scene_design_agent.py  state.py  world_build_agent.py
backend/data/: memory.db
backend/data/snapshots/: ch1_v1.json
backend/data/summaries/: chapter_summaries.json
backend/frontend/: index.html
backend/scripts/: add_batch_narrator.py  new_webui.py  rag_memory.py  rag_v2.py  refactor_worldbuilder.py  run_50k.py  run_demo.py  test_v060.py
examples/: chars.txt  world.txt  西幻_光明大陆.txt  西幻_光明大陆_世界观.txt  西幻_光明大陆_角色.txt
scripts/: run_50chapters.py
tests/: test_core.py
