[project]
name = "novel-world-engine"
version = "0.3.1"
description = "创世日记引擎 — 让角色在模拟的世界中书写自己的故事"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }
authors = [
    { name = "创世日记引擎 contributors" },
]
dependencies = [
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.27.0",
    "fastapi>=0.109.0",
]

[project.urls]
Homepage = "https://github.com/qoqu/novel-world-engine"
Repository = "https://github.com/qoqu/novel-world-engine.git"

[project.scripts]
novel-world-engine = "app.cli:main"
novel-world-engine-server = "app.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
